# ogl_house_scene

./: Cargo.toml  README.md
models/: Dragon.mtl  Humvee.mtl
src/: main.rs  texture_loader.rs  transform.rs  vertex.rs
src/assets/: mod.rs
src/assets/load_tex/: mod.rs
src/assets/matrices/: mod.rs
src/assets/transform/: mod.rs
src/codegen/: data_template.rs  main.rs  model_template.rs
src/event_handler/: mod.rs
src/model/: mod.rs  shader.frag  shader.vert
src/model/generic_model/: mod.rs
src/model/humvee/: data.rs  mod.rs
src/model/model_parser/: mod.rs
src/model/shaders/: shader.frag  shader.vert
src/skybox/: mod.rs  skybox.frag  skybox.vert
